welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if (ado(a)){
        ^